# ollieRosTools

./: .gitignore  CMakeLists.txt  README.md  manifest.xml
cfg/: PreProcNode_params.cfg  VoNode_params.cfg  synth_params.cfg
include/ollieRosTools/: Aux.hpp  CamLatencySub.hpp  CameraATAN.hpp  CameraModel.hpp  Detector.hpp  Frame.hpp  Landmark.hpp  Map.hpp  Matcher.hpp  OCam.hpp  Odometry.hpp  PreProc.hpp  PreProcNode.hpp  Tracker.hpp  VoNode.hpp  aux.hpp
include/ollieRosTools/custom_types/: draw_functions.hpp  edge_pose_landmark_reprojectBV.hpp  edge_pose_pose.hpp  vertex_landmarkxyz.hpp  vertex_pose.hpp
launch/: testBag.launch  testCam.launch  testFlieCam.launch  testNoVid.launch
launch/data/: testRviz.rviz
matlab/: hover.tikz
matlab/Evaluation/: PlotYawDrift.m  RMSE_traj.m  hover1.tikz  hover2.tikz  hover3.tikz  pidZ.tikz  plotBaro.m  plotBaroPerf.m  plotBaroUpDown.m  plotHover.m  plotHoverDischarge.m  plotHoverPresentation.m  plotHoverPresentation2.m  plotHoverVO.m  plotPIDThrust.m  plotPIDX.m  plotPIDYaw.m  plotTF.m  plotTFA.m  plotTFYaw.m  plotXYZ.m  plotXYZVO.m  plotZPresentation.m  velStat.m  voltageHover.tikz
matlab/Geometry/: pinhole.m  t_apply.m  t_build.m  t_cons.m  t_inv.m  t_translation.m  tq2t.m  unit_sphere.m  unit_vector.m  unrotate_unit_sphere.m  vnorm.m
matlab/Other/: f2f_disparity.m  imu2camStatic.m  matlab2opencv.m  subplottight.m  unwrapRPY.m
matlab/Plotting/: depth_map.m  plot_feat_cam3d.m  plot_frame.m  plot_movie.m  plot_scene.m
matlab/Scripts/: TestingRelativeRotation.m  TestingRelativeRotationClose.m  bearingvectorComparison.m  bvCompare.tikz  exportTrajectory.m  g2o_vis.m  generateTrajectory.m  generateTrajectorySettings.m
matlab/Scripts/Utility/: get_features.m  get_featuresCircle.m  get_trajectory.m
matlab/Thesis/: ransacEval.m  ransacTable.tex
matlab/Thesis/ransac/: ransac.m  ransac_eps_100_ 24.eps  ransac_eps_101_ 75.eps  ransac_eps_102_ 28.eps  ransac_eps_103_ 10.eps  ransac_eps_104_ 14.eps  ransac_eps_105_ 53.eps  ransac_eps_106_ 21.eps  ransac_eps_107_ 22.eps  ransac_eps_108_ 14.eps  ransac_eps_109_ 78.eps  ransac_eps_10_ 20.eps  ransac_eps_110_ 32.eps  ransac_eps_111_ 15.eps  ransac_eps_112_ 26.eps  ransac_eps_113_ 21.eps  ransac_eps_114_ 12.eps  ransac_eps_115_ 16.eps  ransac_eps_116_ 49.eps  ransac_eps_117_ 14.eps  ransac_eps_118_ 25.eps  ransac_eps_119_ 15.eps  ransac_eps_11_ 75.eps  ransac_eps_120_ 25.eps  ransac_eps_121_ 29.eps  ransac_eps_122_ 20.eps  ransac_eps_123_ 21.eps  ransac_eps_124_ 23.eps  ransac_eps_125_ 24.eps  ransac_eps_126_ 21.eps  ransac_eps_127_ 17.eps  ransac_eps_128_ 14.eps  ransac_eps_129_ 23.eps  ransac_eps_12_ 11.eps  ransac_eps_130_ 19.eps  ransac_eps_131_ 34.eps  ransac_eps_132_ 13.eps  ransac_eps_133_ 25.eps  ransac_eps_134_ 34.eps  ransac_eps_135_ 28.eps  (+261 more)
matlab/Thesis/ransac/chosen/: first.eps  key.eps  last.eps
msg/: synthFrame.msg
src/: Aux.cpp  CamLatencySub.cpp  CameraATAN.cpp  CameraModel.cpp  Detector.cpp  Frame.cpp  Landmark.cpp  Map.cpp  Matcher.cpp  OCam.cpp  Odometry.cpp  PreProc.cpp  PreProcNode.cpp  Tracker.cpp  VoNode.cpp  aux.cpp  ba_demo.cpp  mainPreProc.cpp  mainVO.cpp  sba_demo.cpp
src/custom_types/: CMakeLists.txt  edge_pose_landmark_reprojectBV.cpp  edge_pose_pose.cpp  register_types.cpp  vertex_landmarkxyz.cpp  vertex_pose.cpp
